@@ -1,5 +1,6 @@
 
 4.53  2013-10-30
+  - Fixed a few unsubscribe and error event bugs in Mojo::EventEmitter.
 
 4.52  2013-10-29
   - Improved Mojo::EventEmitter to allow unhandled error events to be fatal.
